[package]
name = "aws-env"
version = "2.0.0"
edition = "2021"

[dependencies]
configparser = "3"
csv = "1"
dirs = "4"
env_logger = "0.8"
indexmap = { version = "1", features = ["std"] }
ini_core = "0.1"
log = "0.4"
log4rs = "1"
once_cell = "1"
prettytable-rs = "0.8"
serde = { version = "1", features = ["derive"]}
serde_json = "1"
structopt = "0.3"
tokio = { version = "1", features = ["full"] }
tokio-stream = { version = "0.1", features = ["fs"] }
zeroize = { version = "1", features = ["zeroize_derive"] }